Bug 66691 - Librelogo toolbar is missing from menu
Summary: Librelogo toolbar is missing from menu
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Stephan Bergmann
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-08 11:30 UTC by Andras Timar
Modified: 2013-07-24 14:48 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2013-07-08 11:30:48 UTC
Since commit 85f072ef33ef47b5e3e0bcd51acb5c4179cde2c2 Librelogo toolbar is not in the View - Toolbars menu. When LibreOffice is started, there are warning messages:

warn:legacy.osl:11801:1:unotools/source/config/configitem.cxx:503: XHierarchicalNameAccess: AddonUI/OfficeToolBar/LibreLogo.OfficeToolBar/Title
/org.openoffice.Office.Addons/AddonUI/OfficeToolBar/LibreLogo.OfficeToolBar/Title
warn:legacy.osl:11801:1:unotools/source/config/configitem.cxx:503: XHierarchicalNameAccess: AddonUI/OfficeToolBar/LibreLogo.OfficeToolBar/ToolBarItems
/org.openoffice.Office.Addons/AddonUI/OfficeToolBar/LibreLogo.OfficeToolBar/ToolBarItems
Comment 1 Commit Notification 2013-07-24 14:44:52 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=189bb791d248273758bd2b42e0ec216937fa22d9

fdo#66691: Revert fix for i#121577 Allow setting toolbar name in Addons.xcu



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.