fdo#66691: Revert fix for i#121577 Allow setting toolbar name in Addons.xcu

...which incompatibly changed Addons.xcs and breaks extensions (and LibreLogo,
which adds to Addons.xcu even though it is not an extension).  See the mail
thread starting at
<http://lists.freedesktop.org/archives/libreoffice/2013-July/054612.html>
"[Libreoffice-commits] core.git: #i121577# Allow setting toolbar name in
Addons.xcu" for details.

This reverts commit 85f072ef33ef47b5e3e0bcd51acb5c4179cde2c2
"Resolves: #i121577# Allow setting toolbar name in Addons.xcu" plus follow-up
af572d9fbb744c9691abe465815d7927a9d11510 "Related: #i121577# Allow setting
toolbar name in Addons.xcu," f13f9b5cc5267a7a5606b1a89db91b6d7aef5f9c "various
.xcus are gone now," and 37d9921797a3ad3be8257fbfee11326549fcd987
"odk/examples/python/toolpanel/CalcWindowState.xcu is still in use," plus those
parts of f97ca6f65182efc6542c53ac5e973b3ff398a5d1 "Resolves: #i116455# Make
toolbar style settings persistent" that apparently belong to the fix for
i#121577 rather than i#116455.

Change-Id: Ib744566f3d8da7d9008d7dad8bec60f1bf32e743